# ColStudies

./: .zenodo.json  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
web/: colecticaapi.py  colstudies.py  dbkeditapi.py  globalvars.py  settings.py  starapi.py  starinfo.py  study.py
web/util/: dara.py  ddixml.py  edxml.py
